Models criados. Iniciando a criação dos Repositories

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/recipe-repo-database
+spring.datasource.username=postgres
+spring.datasource.password=db23072001
+spring.jpa.hibernate.ddl-auto=update
 
+spring.jpa.properties.hibernate.jdbc.lab.non_contextual_creation=true
